erDiagram
    User ||--o{ AuditLog : "performs actions"
    User ||--o{ TokenBalance : "has balance"
    User ||--o{ TokenTransaction : "has transactions"
    User ||--o{ BatchJob : "creates jobs"
    TokenBalance ||--o{ TokenTransaction : "has history"
    AlertRule ||--o{ Alert : "triggers"
    Alert }o--|| User : "resolved by admin"
    BatchJob }o--|| User : "created by admin"

    User {
        Guid Id PK
        string Email UK
        string DisplayName
        string Role
        UserTier Tier
        int Level
        bool IsSuspended
        DateTime SuspendedAt
        string SuspensionReason
    }

    AuditLog {
        Guid Id PK
        Guid AdminUserId FK
        Guid TargetUserId FK
        string Action
        string Resource
        Guid ResourceId
        string Result
        string Details
        string IpAddress
        DateTime Timestamp
    }

    TokenBalance {
        Guid Id PK
        Guid UserId FK
        long AvailableTokens
        long ConsumedTokens
        long TotalAllocated
        DateTime LastUpdatedAt
    }

    TokenTransaction {
        Guid Id PK
        Guid UserId FK
        long Amount
        string Operation
        string Metadata
        DateTime CreatedAt
    }

    BatchJob {
        Guid Id PK
        string JobType
        Guid CreatedBy FK
        BatchJobStatus Status
        string Parameters
        int TotalItems
        int ProcessedItems
        int FailedItems
        DateTime CreatedAt
        DateTime StartedAt
        DateTime CompletedAt
        string ErrorMessage
    }

    AlertRule {
        Guid Id PK
        string Name
        string Description
        string RuleExpression
        AlertSeverity Severity
        bool IsEnabled
        string EmailRecipients
        DateTime CreatedAt
        DateTime LastTriggeredAt
    }

    Alert {
        Guid Id PK
        Guid AlertRuleId FK
        AlertSeverity Severity
        string Message
        bool IsResolved
        DateTime TriggeredAt
        DateTime ResolvedAt
        Guid ResolvedBy FK
    }
